testsuite/poke.pkl/attr-diag-2.pk
/* { dg-do compile } */

var a =
  [1,2,3]'length /* { dg-error "argument" } */
    (32);
